; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_intel.c___cmci_disable_bank.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_intel.c___cmci_disable_bank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mce_banks_owned = common dso_local global i32 0, align 4
@MCI_CTL2_CMCI_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__cmci_disable_bank to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__cmci_disable_bank(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @mce_banks_owned, align 4
  %6 = call i32 @this_cpu_ptr(i32 %5)
  %7 = call i32 @test_bit(i32 %4, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %27

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @MSR_IA32_MCx_CTL2(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @rdmsrl(i32 %12, i32 %13)
  %15 = load i32, i32* @MCI_CTL2_CMCI_EN, align 4
  %16 = xor i32 %15, -1
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @MSR_IA32_MCx_CTL2(i32 %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @wrmsrl(i32 %20, i32 %21)
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @mce_banks_owned, align 4
  %25 = call i32 @this_cpu_ptr(i32 %24)
  %26 = call i32 @__clear_bit(i32 %23, i32 %25)
  br label %27

27:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @test_bit(i32, i32) #1

declare dso_local i32 @this_cpu_ptr(i32) #1

declare dso_local i32 @rdmsrl(i32, i32) #1

declare dso_local i32 @MSR_IA32_MCx_CTL2(i32) #1

declare dso_local i32 @wrmsrl(i32, i32) #1

declare dso_local i32 @__clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
